# nandina_experiment

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  meson.build  meson_options.txt  vcpkg.json
.github/: copilot-instructions.md
cmake/: CPM.cmake
docs/: design-layout.md  design.md  development-plan.md  fri_apr_10_2026_design_discussion_for_ui_framework.json  meeting-notes-2026-04-10.md  reactive-design.md  reactive-primitives.md  report-1.txt  some_issue.md
docs/design_discussion_for_ui_framework/: mon_apr_13_2026_design_discussion_for_ui_framework.md
docs/design_discussion_for_ui_framework/v1_docs/design/: reactive-and-signal-design.md
docs/development/: README.md
example/: application_window.ixx  main.cpp  meson.build  physics_main.cpp  resources.lock.toml  resources.toml  some_issue.md  utils.hpp
example/pages/: CounterPage.ixx  DemoPage.ixx
example/res/fonts/: meson.build
example/res/fonts/zh-cn/: source.toml
meson/: nandina_resources.build
nandina/: meson.build  nandina_greet.cpp  nandina_greet.hpp
nandina/app/: application_config.cpp  application_config.hpp  async_scope.cpp  async_scope.hpp  nan_application.cpp  nan_application.hpp  nan_page.hpp  nan_router.cpp  nan_router.hpp  nan_store.hpp  nan_window.cpp  nan_window.hpp  ui_dispatcher.cpp  ui_dispatcher.hpp  window_config.hpp
nandina/foundation/: geometry.cpp  geometry.hpp  nan_logger.cpp  nan_logger.hpp  nandina_color.cpp  nandina_color.hpp  nandina_color_space.cpp  nandina_color_space.hpp  transform2d.cpp  transform2d.hpp  utf8.cpp  utf8.hpp
nandina/physics2d/: physics_world2d.cpp  physics_world2d.hpp
nandina/reactive/: batch.hpp  computed.hpp  effect.hpp  event.hpp  graph.cpp  graph.hpp  property.hpp  reactive.hpp  scope.hpp  signal.hpp
nandina/render/: clip_stack.hpp  draw_context.hpp  render_device.hpp
nandina/render/backends/: raylib_device.cpp  raylib_device.hpp
nandina/resource/: file_resource_stream.cpp  file_resource_stream.hpp  platform_resource_locator.cpp  platform_resource_locator.hpp  resource.cpp  resource.hpp  resource_backend.cpp  resource_backend.hpp  resource_manager.cpp  resource_manager.hpp  resource_manifest.hpp  resource_scanner.cpp  resource_scanner.hpp  resource_stream.cpp  resource_stream.hpp  resource_uri.cpp  resource_uri.hpp
nandina/resource/backends/: builtin_backend.cpp  builtin_backend.hpp  directory_backend.cpp  directory_backend.hpp  memory_backend.cpp  memory_backend.hpp  sqlite_backend.cpp  sqlite_backend.hpp
nandina/scene/: canvas_layer.cpp  canvas_layer.hpp  control.cpp  control.hpp  frame_scheduler.hpp  input_event.hpp  node.cpp  node.hpp  node2d.cpp  node2d.hpp  scene_tree.cpp  scene_tree.hpp
nandina/semantics/: semantics.cpp  semantics.hpp
nandina/text/: font_face.hpp  font_family.cpp  font_family.hpp  font_loader.cpp  font_loader.hpp  font_pipeline.cpp  font_pipeline.hpp  freetype_font_face.cpp  glyph_atlas.cpp  glyph_atlas.hpp  glyph_run_renderer.cpp  glyph_run_renderer.hpp  harfbuzz_text_backend.cpp  harfbuzz_text_backend.hpp
nandina/theme/: button_style.cpp  button_style.hpp  nan_style.cpp  nan_style.hpp  style_context.hpp  style_document.cpp  style_document.hpp  text_field_style.cpp  text_field_style.hpp  theme.hpp  theme_manager.cpp  theme_manager.hpp  tokens.hpp
nandina/widget/: bindable_rect.hpp  button.cpp  button.hpp  declarative.hpp  label.cpp  label.hpp  layout.cpp  layout.hpp  reactive_control.hpp  scroll_view.cpp  scroll_view.hpp  text_field.cpp  text_field.hpp
nandina/widget/primitives/: editable_text.cpp  editable_text.hpp  pressable.cpp  pressable.hpp  surface.cpp  surface.hpp  text.cpp  text.hpp  text_layout.cpp  text_layout.hpp  text_layout_backend.cpp  text_layout_backend.hpp
public/: NanApplication.ixx  NanComponent.ixx  NanRect.ixx  NandianWindow.ixx  main.cpp
src/: HelloWorld.ixx  application_window.ixx  main.cpp
src/components/: Label.ixx
src/core/: Button.ixx  Color.ixx  Component.ixx  CompositeComponent.ixx  Core.ixx  Event.ixx  FreeWidget.ixx  NanApplication.ixx  Page.ixx  RenderLayer.ixx  Router.ixx  Signal.ixx  Widget.ixx  Window.ixx
src/layout/: FlexLayout.ixx  Layout.ixx  LayoutBackend.ixx  YogaAdapter.ixx  YogaMapping.ixx
src/reactive/: Prop.ixx  Reactive.ixx  State.ixx  StateList.ixx
src/style/: Theme.ixx
src/types/: Position.ixx  Rect.ixx  Size.ixx  Types.ixx
subprojects/: box2d-8c661469c9507d3ad6fbd2fea3f1aa71669c2fe3.wrap
tests/: application_bootstrap_probe.cpp  application_resource_tests.cpp  async_tests.cpp  bundled_font_tests.cpp  button_tests.cpp  font_resource_tests.cpp  font_tests.cpp  foundation_tests.cpp  layout_mapping_smoke.cpp  meson.build  nandina_subproject_fixture_test.py  nanres_build_workflow_test.py  nanres_cli_test.py  nanres_install_test.py  nanres_package_probe.cpp  physics2d_tests.cpp  r10_layout_test.py  reactive_smoke.cpp  reactive_tests.cpp  render_tests.cpp  resource_tests.cpp  router_tests.cpp  scene_tests.cpp  widget_tests.cpp
tools/: embed_binary.cpp  nanres_build_helper.py  nanres_install.py  nanres_main.cpp  resource_manifest.cpp  resource_packager.cpp
